--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "konnekt-echo",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -14,14 +15,13 @@
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
     "autoprefixer": "10.4.14",
-    "dgram": "^1.0.1",
-    "http": "^0.0.1-security",
     "next": "13.4.5",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
-    "ws": "^8.18.0"
+    "ws": "^8.13.0"
   }
 }
+
