--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,8 +32,8 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts"
-  ],
+    ".next/types/**/*.ts",
+    "shared/constants.js"  ],
   "exclude": [
     "node_modules"
   ]
