--- a/package.json
+++ b/package.json
@@ -11,17 +11,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "20.3.1",
-    "@types/react": "18.2.12",
-    "@types/react-dom": "18.2.5",
-    "autoprefixer": "10.4.14",
-    "next": "13.4.5",
-    "osc": "^2.4.5",
-    "postcss": "8.4.24",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.1.3",
-    "ws": "^8.13.0"
+    "clsx": "2.1.1",
+    "next": "14.2.20",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "ws": "8.18.0"
+  },
+  "devDependencies": {
+    "@types/node": "22.3.0",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.1",
+    "eslint": "8.57.1",
+    "eslint-config-next": "14.2.20",
+    "tailwindcss": "3.4.16",
+    "tailwindcss-animate": "1.0.7",
+    "tailwind-merge": "2.5.5",
+    "typescript": "5.7.2"
   }
 }
