--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "18.2.5",
     "autoprefixer": "10.4.14",
     "next": "13.4.5",
+    "osc": "^2.4.5",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -24,4 +25,3 @@
     "ws": "^8.13.0"
   }
 }
-
