--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "next build",
     "start": "next start",
     "server": "node server/server.js",
+    "test-server": "node server/udp-test-server.js",
     "lint": "next lint"
   },
   "dependencies": {
