--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.62.7",
+    "axios": "^1.7.9",
     "clsx": "2.1.1",
     "next": "14.2.20",
     "react": "18.3.1",
@@ -24,9 +26,9 @@
     "@types/react-dom": "18.3.1",
     "eslint": "8.57.1",
     "eslint-config-next": "14.2.20",
+    "tailwind-merge": "2.5.5",
     "tailwindcss": "3.4.16",
     "tailwindcss-animate": "1.0.7",
-    "tailwind-merge": "2.5.5",
     "typescript": "5.7.2"
   }
 }
